# SLib

./: CMakeLists.txt  README.md
CMake/: HelperFunctions.cmake
Source/SLib/: CMakeLists.txt  Error.cpp  Error.hpp  Logger.cpp  Logger.hpp  Portable.hpp  SLib.cpp
Source/SLib/Enum/: Enum.hpp
Source/SLib/Interface/: IMovable.hpp  ISingleton.hpp
Source/SLib/Math/: Bits.hpp  CMakeLists.txt  Common.hpp  Constant.hpp  Hash.hpp  Math.hpp  Numeric.hpp  Polynomial.hpp
Source/SLib/Memory/: Memory.hpp
Source/SLib/String/: StringType.hpp
Source/SLib/Utility/: Utility.hpp
Source/SLibCUDA/: CMakeLists.txt  Logger.hpp  Math.hpp  SLibCUDA.cpp
Tests/: CMakeLists.txt
Tests/CUDA/: CMakeLists.txt  CuTests.cu  CuTests.hpp  main.cpp
